# screenshot

./: CMakeLists.txt
debian/: control  rules
qml/: ImageButton.qml  main.qml
src/: main.cpp  screenshotview.cpp
